--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,7 +40,7 @@
                                 class="sr-only">(current)</span></a>
                     </li> #}
                     <li class="nav-item">
-                        <a class="nav-link" onclick="dynamicNav()" href="{{path('restaurant')}}"><img class="text- src="img/burger.svg" height="30px" width="30px">Restaurant<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" onclick="dynamicNav()" href="{{path('restaurant')}}"><img src="img/burger.svg" height="30px" width="30px" color="white">Restaurant<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" onclick="dynamicNav()" href="{{path('lasergame')}}">Laser Game<span class="sr-only">(current)</span></a>
