--- a/templates/realitevirtuelle/realitevirtuelle.html.twig
+++ b/templates/realitevirtuelle/realitevirtuelle.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Réalité Virtuelle{% endblock %}
 
 {% block body %}
-<main class="project-bg vrpage mt-5"> 
+<main class="vrpage bg-primary mt-5"> 
    
         <div class="pt-5 pb-5 articles-about container">
              <h2 class="text-center pt-2 pb-2 mt-2 mb-2 text-light">Réalité Virtuelle</h2>
