--- a/public/css/app.css
+++ b/public/css/app.css
@@ -258,12 +258,16 @@ strong{
 	background-image: url("../img/headervr.jpg");
 	background-position: center;
 	background-size: cover;
-	/* background-attachment: fixed; */
 	margin: auto;
-	height: 250px;
+	height: 350px;
+	border: solid  rgba(37, 52, 163, 0.7) 2px;
 }
 
+.titlecatvr{
+	background-color: rgba(37, 52, 163, 0.5);
+}
+/* 
 .divcatvr{
 	height: 700px;
-}
+} */
 
