--- a/templates/realitevirtuelle/realitevirtuelle.html.twig
+++ b/templates/realitevirtuelle/realitevirtuelle.html.twig
@@ -57,7 +57,23 @@
                 <a href="{{ path('allcategoryVR') }}" class="btn btn-outline-secondary text-white mr-5 rounded">NOS JEUX VR <i class="fas fa-arrow-right"></i></a>
             </div>            
         </div>
-
-    </div>
+      
+    </div>  <div class="text-white text-center mt-2 pt-3 pb-3 titlecatvr">
+            <h2 class="text-white">Horaires de la Réalité virtuelle</h2>
+            <hr>
+            <p>Lundi -> Fermé</p>
+            
+            <p>Mardi -> Fermé</p>
+            
+            <p>Mercredi -> 14:00 / 22:00</p>
+            
+            <p>Jeudi -> 16:00 / 22:00</p>
+            
+            <p>Vendredi -> 16:00 / 22:00</p>
+            
+            <p>Samedi -> 14:00 / 22:00</p>
+            
+            <p>Dimanche -> 14:00 / 22:00</p>
+        </div>
 </main>
 {% endblock %}
