--- a/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
+++ b/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
@@ -11,7 +11,7 @@
             <p class="text-white text-center p-3 vrsubtitle h3 font-weight-light"> Vivre de nouvelles expériences </p>
         </div>
     </div>
-    <h2 class="mt-5 text-center text-white">Choisir une catégorie</h2>
+    <!-- <h2 class="mt-5 text-center text-white">Choisir une catégorie</h2>
 <div class="row divcatvr">
     {% for category in categories %}
     <div class="col-4 text-center mt-5 mx-auto">
@@ -24,7 +24,37 @@
         </div>
     </div>
     {% endfor %}
-</div>
+</div> --> 
+ <div class="body-laser text bg-primary  container-fluid">
+        <div class="bg-primary py-5">
+            <h2 class="card-header titlecatvr sdw my-3 text-center text-white">Choisir une catégorie</h2>
+            <div class="row">
+                {% for category in categories %}
+                <div class="col-4 text-center mt-5 mx-auto divcatlaser">
+                    <div class="card pt-5 mb-3 bg-secondary catvr">
+                        <h3 class="card-header titlecatvr sdw text-light">{{ category.nom }}</h3>
+                        <div class="card-body d-flex flex-column-reverse col-5 mx-auto">
+                            <a href="{{ url('categoryVR',{id:category.id}) }}" class="card-link btn titlecatvr sdw rounded text-light">Choisir</a>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+                <div class="row pt-5">
+        <div class="">
+            <a class="card-link btn titlecatvr sdw rounded text-light" href="{{ path('realitevirtuelle') }}">Retour</a>
+        </div>
+    </div>
+        </div>
+    </div>
+        {# {% for category in categories %}
+        <p><a href="{{ url('categorytarif',{id:category.id}) }}" class="text-white text-center">{{ category.nom }}</a></p>
+        <img src="{{ asset('img/cityfarWest.jpg') }}" alt="lasergame" class=" img-fluid rounded border border-primary">
+        {% endfor %} #}
+
 </main>
 {% endblock %}
+
+
+  
 
