modif text menu
ecriture blanc en noir

--- a/templates/restaurant/vueCategoryMenu.html.twig
+++ b/templates/restaurant/vueCategoryMenu.html.twig
@@ -3,7 +3,7 @@
 
 {% block body %}
 <main>
-    <h2 class="mt-5 text-center text-white"> {{ category.nom }} </h2>
+    <h2 class="mt-5 text-center text-primary"> {{ category.nom }} </h2>
     <div class="row">
         {% for menu in menus %}
             <div class="col-4 text-center mt-5 mx-auto">
