--- a/templates/restaurant/vueAllCategoryMenu.html.twig
+++ b/templates/restaurant/vueAllCategoryMenu.html.twig
@@ -5,10 +5,10 @@
 {% block body %}
 <main>
     <div class="mt-5">
-        <h3 class="text-white text-center">Choisis ton repas</h3>
+        <h3 class="text-primary text-center">Choisis ton repas</h3>
         <div class="text-center py-3 articles-about">
             {% for category in categories %}
-            <a href="{{ url('categoryMenu',{id:category.id}) }}" class="text-white">{{ category.nom }}</a>
+            <a href="{{ url('categoryMenu',{id:category.id}) }}" class="text-primary">{{ category.nom }}</a>
             {% endfor %}
         </div>   
     </div>
