--- a/templates/lasergame/vueAllCategoryTarif.html.twig
+++ b/templates/lasergame/vueAllCategoryTarif.html.twig
@@ -27,11 +27,11 @@
                 </div>
                 {% endfor %}
             </div>
-                <div class="row pt-5">
-        <div class="">
-            <a class="card-link btn bibo3 sdw rounded text-light" href="{{ path('lasergame') }}">Retour</a>
-        </div>
-    </div>
+            <div class="row pt-5">
+                <div class="col-3">
+                    <a class="card-link btn bibo3 sdw rounded text-light" href="{{ path('lasergame') }}">Retour</a>
+                </div>
+            </div>
         </div>
     </div>
         {# {% for category in categories %}
