--- a/templates/realitevirtuelle/base.html.twig
+++ b/templates/realitevirtuelle/base.html.twig
@@ -35,16 +35,17 @@
 
             <div class="navbar-collapse collapse" id="NavBarHamburger">
                 <ul class="navbar-nav ml-auto">
-                    {% if is_granted('ROLE_SUPER_ADMIN') %}
+{% if is_granted('ROLE_SUPER_ADMIN') %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Admin Restaurant</a>
                         <div class="dropdown-menu">
                         <a class="dropdown-item" onclick="dynamicNav()" href="{{path('restaurant')}}">Restaurant<span class="sr-only">(current)</span></a>
-                        <a class="dropdown-item" href="{{ path('virtual_index') }}">Liste des menus</a>
-                        <a class="dropdown-item" href="{{ path('category_virtual_index') }}">Liste des catégories</a>
-                        <a class="dropdown-item" href="{{ path('virtual_new') }}">Nouveau Menu</a>
-                        <a class="dropdown-item" href="{{ path('category_virtual_new') }}">Nouvelle catégorie</a>
                         <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ path('virtual_index') }}">Liste des menus</a>
+                        <a class="dropdown-item" href="{{ path('virtual_new') }}">Nouveau menu</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ path('category_virtual_index') }}">Liste des catégories</a>
+                        <a class="dropdown-item" href="{{ path('category_virtual_new') }}">Nouvelle catégorie</a>
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link" onclick="dynamicNav()" href="{{path('restaurant')}}">Restaurant<span class="sr-only">(current)</span></a>
@@ -55,11 +56,12 @@
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Admin Laser Game</a>
                         <div class="dropdown-menu">
                         <a class="dropdown-item" onclick="dynamicNav()" href="{{path('lasergame')}}">Laser Game<span class="sr-only">(current)</span></a>
-                        <a class="dropdown-item" href="{{ path('tarif_index') }}">Liste des tarifs</a>
-                        <a class="dropdown-item" href="{{ path('category_tarif_index') }}">Liste des catégories</a>
-                        <a class="dropdown-item" href="{{ path('tarif_new') }}">Nouveau tarif</a>
-                        <a class="dropdown-item" href="{{ path('category_tarif_new') }}">Nouvelle catégorie</a>
                         <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ path('tarif_index') }}">Liste des tarifs</a>
+                        <a class="dropdown-item" href="{{ path('tarif_new') }}">Nouveau tarif</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ path('category_tarif_index') }}">Liste des catégories</a>
+                        <a class="dropdown-item" href="{{ path('category_tarif_new') }}">Nouvelle catégorie</a>
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link" onclick="dynamicNav()" href="{{path('lasergame')}}">Laser Game<span class="sr-only">(current)</span></a>
@@ -67,20 +69,20 @@
                     {% endif %}
                     {% if is_granted('ROLE_SUPER_ADMIN') %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Admin Restaurant</a>
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Admin Réalité Virtuelle</a>
                         <div class="dropdown-menu">
                         <a class="dropdown-item" onclick="dynamicNav()" href="{{path('realitevirtuelle')}}">Réalité Virtuelle<span class="sr-only">(current)</span></a>
-                        <a class="dropdown-item" href="{{ path('virtual_index') }}">Liste des jeux</a>
-                        <a class="dropdown-item" href="{{ path('category_virtual_index') }}">Liste des catégories</a>
-                        <a class="dropdown-item" href="{{ path('virtual_new') }}">Nouveau jeu</a>
-                        <a class="dropdown-item" href="{{ path('category_virtual_new') }}">Nouvelle catégorie</a>
                         <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ path('virtual_index') }}">Liste des jeux</a>
+                        <a class="dropdown-item" href="{{ path('virtual_new') }}">Nouveau jeu</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ path('category_virtual_index') }}">Liste des catégories</a>
+                        <a class="dropdown-item" href="{{ path('category_virtual_new') }}">Nouvelle catégorie</a>
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link" onclick="dynamicNav()" href="{{path('realitevirtuelle')}}">Réalité Virtuelle<span class="sr-only">(current)</span></a>
                     </li>
                     {% endif %}
-
                     {% if is_granted('ROLE_SUPER_ADMIN') %}
                     <li class="nav-item">
                         <a class="nav-link" onclick="dynamicNav()" href="{{ path('app_logout') }}"><i class="h4 text-danger fas fa-power-off"></i>
