AdminViews (En cours)

--- a/templates/category_tarif/index.html.twig
+++ b/templates/category_tarif/index.html.twig
@@ -1,13 +1,15 @@
-{% extends 'base.html.twig' %}
+{% extends 'category_tarif/base.html.twig' %}
 
 {% block title %}CategoryTarif index{% endblock %}
 
 {% block body %}
-    <h1>CategoryTarif index</h1>
+    <div class="pt-2 mt-2">
+        <h2 class="pt-5 mt-5 text-center ">Liste des catégories</h2>
+    </div>
 
     <table class="table">
         <thead>
-            <tr>
+            <tr class="bg-primary text-white">
                 <th>Id</th>
                 <th>Nom</th>
                 <th>actions</th>
@@ -19,8 +21,8 @@
                 <td>{{ category_tarif.id }}</td>
                 <td>{{ category_tarif.nom }}</td>
                 <td>
-                    <a href="{{ path('category_tarif_show', {'id': category_tarif.id}) }}">show</a>
-                    <a href="{{ path('category_tarif_edit', {'id': category_tarif.id}) }}">edit</a>
+                    {# <a href="{{ path('category_tarif_show', {'id': category_tarif.id}) }}" class="btn btn-primary text-white">show</a> #}
+                    <a href="{{ path('category_tarif_edit', {'id': category_tarif.id}) }}" class="btn btn-primary text-white">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -30,6 +32,8 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('category_tarif_new') }}">Create new</a>
+    <hr>
+    <div class="p-3"> 
+    <a href="{{ path('category_tarif_new') }}" class="btn btn-primary text-white">Create new</a>
+    </div>
 {% endblock %}
