--- a/templates/category_tarif/edit.html.twig
+++ b/templates/category_tarif/edit.html.twig
@@ -1,13 +1,17 @@
-{% extends 'base.html.twig' %}
+{% extends 'category_tarif/base.html.twig' %}
 
 {% block title %}Edit CategoryTarif{% endblock %}
 
 {% block body %}
-    <h1>Edit CategoryTarif</h1>
-
+    <div class="pt-2 mt-2">
+        <h2 class="pt-5 mt-5 text-center ">Editer une catégorie</h2>
+    </div>
+<div class="pl-5">
     {{ include('category_tarif/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('category_tarif_index') }}">back to list</a>
-
     {{ include('category_tarif/_delete_form.html.twig') }}
+</div>
+<hr>
+<div class="p-3">
+    <a href="{{ path('category_tarif_index') }}" class="btn btn-primary text-white">Retour</a>
+</div>   
 {% endblock %}
