--- a/templates/category_tarif/new.html.twig
+++ b/templates/category_tarif/new.html.twig
@@ -6,10 +6,13 @@
     <div class="pt-2 mt-2">
         <h2 class="pt-5 mt-5 text-center ">Ajouter une catégorie</h2>
     </div>
-    <div class="pl-5">
-    {{ include('category_tarif/_form.html.twig') }}
+    <div class="container d-flex">
+        <div class="pl-5 w-50 text-center col-12">
+            {{ include('category_tarif/_form.html.twig') }}
+        </div>
     </div>
+    <hr>
     <div class="p-3">
-    <a href="{{ path('category_tarif_index') }}" class="btn btn-primary text-white">Retour</a>
-</div>
+        <a href="{{ path('category_tarif_index') }}" class="btn btn-primary text-white">Retour</a>
+    </div>
 {% endblock %}
