--- a/templates/tarif/_form.html.twig
+++ b/templates/tarif/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form2) }}
     {{ form_widget(form2) }}
-    <button class="btn btn-primary text-white">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-primary text-white">{{ button_label|default('Valider') }}</button>
 {{ form_end(form2) }}
