--- a/templates/tarif/edit.html.twig
+++ b/templates/tarif/edit.html.twig
@@ -7,8 +7,12 @@
         <h2 class="pt-5 mt-5 text-center ">Editer un tarif</h2>
     </div>
 <div class="pl-5">
-    {{ include('tarif/_form.html.twig', {'button_label': 'Update'}) }}
-    {{ include('tarif/_delete_form.html.twig') }}
+    <div class="pb-2 w-75">
+        {{ include('tarif/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+    </div>
+    <div>
+        {{ include('tarif/_delete_form.html.twig') }}
+    </div>
 </div>
 <hr>
 <div class="p-3">
