--- a/templates/tarif/new.html.twig
+++ b/templates/tarif/new.html.twig
@@ -6,11 +6,13 @@
     <div class="pt-2 mt-2">
         <h2 class="pt-5 mt-5 text-center ">Ajouter un tarif</h2>
     </div>
-    <div class="pl-5">
-        {{ include('tarif/_form.html.twig') }}
+    <div class="container d-flex">
+        <div class="pl-5 w-50 text-center col-12">
+            {{ include('tarif/_form.html.twig') }}
+        </div>
     </div>
-<hr>
-<div class="p-3">
-    <a href="{{ path('tarif_index') }}" class="btn btn-primary text-white">Retour</a>
-</div>
+    <hr>
+    <div class="p-3">
+        <a href="{{ path('tarif_index') }}" class="btn btn-primary text-white">Retour</a>
+    </div>
 {% endblock %}
