--- a/templates/category_tarif/edit.html.twig
+++ b/templates/category_tarif/edit.html.twig
@@ -7,7 +7,7 @@
         <h2 class="pt-5 mt-5 text-center ">Editer une catégorie</h2>
     </div>
 <div class="pl-5">
-    <div class="pb-2">
+    <div class="pb-2 w-75">
         {{ include('category_tarif/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
     </div>
     <div>
