--- a/templates/virtual/show.html.twig
+++ b/templates/virtual/show.html.twig
@@ -2,28 +2,27 @@
 
 {% block title %}Virtual{% endblock %}
 {% block body %}
-    <h1>Virtual</h1>
+    <h1>Jeux VR</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ virtual.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ virtual.nom }}</td>
-            </tr>
-            <tr>
-                <th>Image</th>
-                <img src="{{ virtual.image }}" alt="{{ virtual.nom }}">
-            </tr>
-        </tbody>
-    </table>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h3>{{ virtual.nom }}</h3>
+            </div>
+            <div class=" mx-auto">
+                <img src="{{ asset(virtual.image) }}" alt="{{ virtual.nom }}" width="100">
+            </div>
+            <div class="col-12">
+                <p> {{ virtual.description }} </p>
+            </div>
+        </div>
+        <div class="col-12 text-center">
+            <a href="{{ path('virtual_edit', {'id': virtual.id}) }}">edit</a>
+            {{ include('virtual/_delete_form.html.twig') }}
+            <a href="{{ path('virtual_index') }}">back to list</a>
+        </div>
+    </div>
 
-    <a href="{{ path('virtual_index') }}">back to list</a>
 
-    <a href="{{ path('virtual_edit', {'id': virtual.id}) }}">edit</a>
 
-    {{ include('virtual/_delete_form.html.twig') }}
 {% endblock %}
