--- a/templates/realitevirtuelle/realitevirtuelle.html.twig
+++ b/templates/realitevirtuelle/realitevirtuelle.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Réalité virtuelle{% endblock %}
 
 {% block body %}
-<main id="typo-vr">
+<main class="typo-vr">
     <div class="sdw bg-primary">
         <div class="header-vr d-flex align-items-center justify-content-center">
             <div class=" mx-auto w-100 bg-title-vr">
@@ -54,7 +54,7 @@
             </div> 
 
              <div class="bg-primary text-center col-12 p-5">
-                <a href="{{ path('allcategoryVR') }}" class="btn btn-outline-secondary text-white mr-5 rounded">NOS JEUX VR <i class="fas fa-arrow-right"></i></a>
+                <a href="{{ path('allcategoryVR') }}" class="btn btn-outline titlecatvr text-white mr-5 rounded">NOS JEUX VR <i class="fas fa-arrow-right"></i></a>
             </div>            
         </div>
       
