--- a/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
+++ b/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
@@ -1,9 +1,9 @@
 {% extends 'realitevirtuelle/base.html.twig' %}
 
-{% block title %} - Le Complexe{% endblock %}
+{% block title %}Catégorie VR - Le Complexe{% endblock %}
 
 {% block body %}
-<main class="bg-primary">
+<main class="bg-primary vrpage">
 
     <div class="header-vr d-flex align-items-center justify-content-center">
         <div class=" mx-auto w-100 bg-title-vr">
@@ -11,26 +11,12 @@
             <p class="text-white text-center p-3 vrsubtitle h3 font-weight-light"> Vivre de nouvelles expériences </p>
         </div>
     </div>
-    <!-- <h2 class="mt-5 text-center text-white">Choisir une catégorie</h2>
-<div class="row divcatvr">
-    {% for category in categories %}
-    <div class="col-4 text-center mt-5 mx-auto">
-        <div class="card mb-3 bg-secondary catvr">
-            <h3 class="card-header bg-info text-light">{{ category.nom }}</h3>
-
-            <div class="card-body d-flex flex-column-reverse col-5 mx-auto">
-                <a href="{{ url('categoryVR',{id:category.id}) }}" class="card-link btn btn-info rounded border">Choisir</a>
-            </div>
-        </div>
-    </div>
-    {% endfor %}
-</div> --> 
  <div class="body-laser text bg-primary  container-fluid">
         <div class="bg-primary py-5">
             <h2 class="card-header titlecatvr sdw my-3 text-center text-white">Choisir une catégorie</h2>
             <div class="row">
                 {% for category in categories %}
-                <div class="col-4 text-center mt-5 mx-auto divcatlaser">
+                <div class="col-4 text-center mt-5 mx-auto  divcatlaser">
                     <div class="card pt-5 mb-3 bg-secondary catvr">
                         <h3 class="card-header titlecatvr sdw text-light">{{ category.nom }}</h3>
                         <div class="card-body d-flex flex-column-reverse col-5 mx-auto">
@@ -41,17 +27,12 @@
                 {% endfor %}
             </div>
                 <div class="row pt-5">
-        <div class="">
+        <div>
             <a class="card-link btn titlecatvr sdw rounded text-light" href="{{ path('realitevirtuelle') }}">Retour</a>
         </div>
     </div>
         </div>
     </div>
-        {# {% for category in categories %}
-        <p><a href="{{ url('categorytarif',{id:category.id}) }}" class="text-white text-center">{{ category.nom }}</a></p>
-        <img src="{{ asset('img/cityfarWest.jpg') }}" alt="lasergame" class=" img-fluid rounded border border-primary">
-        {% endfor %} #}
-
 </main>
 {% endblock %}
 
