--- a/templates/realitevirtuelle/vueCategoryVirtual.html.twig
+++ b/templates/realitevirtuelle/vueCategoryVirtual.html.twig
@@ -1,29 +1,36 @@
-{% extends 'base.html.twig' %}
-{% block title %}Catégories des jeux VR - Le Complexe{% endblock %}
+{% extends 'realitevirtuelle/base.html.twig' %}
+{% block title %}Jeux VR - Le Complexe{% endblock %}
 
 {% block body %}
-<main>
+<main class="bg-primary vrpage">
+
+    <div class="header-vr d-flex align-items-center justify-content-center">
+        <div class=" mx-auto w-100 bg-title-vr">
+            <h1 class="text-white text-center p-3 vrtitle"> Réalité Virtuelle </h1>
+            <p class="text-white text-center p-3 vrsubtitle h3 font-weight-light"> Vivre de nouvelles expériences </p>
+        </div>
+    </div>
     <h2 class="mt-5 text-center text-white"> {{ category.nom }} </h2>
     <div class="row">
         {% for jeu in jeux %}
-            <div class="col-4 text-center mt-5 mx-auto">
-                <div class="card mb-3 {% if loop.first %} bg-secondary{% endif %}">
+            <div class="col-4 text-center  mt-5 mx-auto">
+                <div class="card text-light titlecatvr mb-3 {% if loop.first %} {% endif %}">
                     <h3 class="card-header">{{ jeu.nom }}</h3>
                     <div class="card-body">
                         <h5 class="card-title"> {{ jeu.category.nom }}</h5>
-                        <img src="{{ asset(jeu.image) }}" alt="{{ jeu.category.nom }}" width="100">
+                        <img src="{{ asset(jeu.image) }}" alt="{{ jeu.category.nom }}" width="100%" class="rounded">
                     </div>
-                    <div class="card-body">
-                        <a href="{{ url('jeuVR', {id: jeu.id}) }}" class="card-link">En savoir plus &rarr;</a>
+                    <div>
+                        <a href="{{ url('jeuVR', {id: jeu.id}) }}" class=" btn">En savoir plus &rarr;</a>
                     </div>
                 </div>
             </div>
             
         {% endfor %}
     </div>
-    <div class="row">
-        <div class="col-3">
-            <a class="text-white" href="{{ path('allcategoryVR') }}">Retour à la liste des catégories</a>
+    <div class="row pt-5">
+        <div>
+            <a class="text-whitecard-link btn titlecatvr sdw rounded text-light" href="{{ path('allcategoryVR') }}">Retour</a>
         </div>
     </div>
 
