--- a/templates/tarif/new.html.twig
+++ b/templates/tarif/new.html.twig
@@ -6,8 +6,8 @@
     <div class="pt-2 mt-2">
         <h2 class="pt-5 mt-5 text-center ">Ajouter un tarif</h2>
     </div>
-    <div class="container d-flex">
-        <div class="pl-5 w-50 text-center col-12">
+    <div class="container d-flex ">
+        <div class="pl-5 w-50 text-center col-8 mx-auto">
             {{ include('tarif/_form.html.twig') }}
         </div>
     </div>
