--- a/templates/home/homepage.html.twig
+++ b/templates/home/homepage.html.twig
@@ -61,7 +61,7 @@
         </div>
     </div>
     <!-- About -->
-    <div class="project-bg bg-danger">
+    <div class="project-bg bg-primary">
         <div class="pt-5 pb-5 articles-about">
             <article id="about" class="container m-auto pb-1 pt-1 mt-2 mb-2">
                 <h2 class="text-center pt-2 pb-2 mt-2 mb-2 text-light">Qui sommes-nous ?</h2>
