--- a/templates/virtual/index.html.twig
+++ b/templates/virtual/index.html.twig
@@ -1,13 +1,15 @@
-{% extends 'base.html.twig' %}
+{% extends 'category_tarif/base.html.twig' %}
 
 {% block title %}Virtual index{% endblock %}
 
 {% block body %}
-    <h1>Virtual index</h1>
+     <div class="pt-2 mt-2">
+        <h2 class="pt-5 mt-5 text-center ">Liste des jeux</h2>
+    </div>
 
     <table class="table">
         <thead>
-            <tr>
+            <tr class="bg-primary text-white">
                 <th>Id</th>
                 <th>Nom</th>
                 <th>actions</th>
@@ -19,17 +21,18 @@
                 <td>{{ virtual.id }}</td>
                 <td>{{ virtual.nom }}</td>
                 <td>
-                    <a href="{{ path('virtual_show', {'id': virtual.id}) }}">show</a>
+                    {# <a href="{{ path('virtual_show', {'id': virtual.id}) }}">show</a> #}
                     <a href="{{ path('virtual_edit', {'id': virtual.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="7">Aucun résultat</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('virtual_new') }}">Create new</a>
+    <div class="p-3">
+        <a class="btn btn-primary text-white" href="{{ path('virtual_new') }}">Nouveau</a>
+    </div>
 {% endblock %}
