--- a/templates/category_virtual/index.html.twig
+++ b/templates/category_virtual/index.html.twig
@@ -19,7 +19,7 @@
                 <td>{{ category_virtual.id }}</td>
                 <td>{{ category_virtual.nom }}</td>
                 <td>
-                    <a href="{{ path('category_virtual_show', {'id': category_virtual.id}) }}">show</a>
+                    {# <a href="{{ path('category_virtual_show', {'id': category_virtual.id}) }}">show</a> #}
                     <a href="{{ path('category_virtual_edit', {'id': category_virtual.id}) }}">edit</a>
                 </td>
             </tr>
