--- a/templates/category_virtual/index.html.twig
+++ b/templates/category_virtual/index.html.twig
@@ -7,7 +7,7 @@
 
     <table class="table">
         <thead>
-            <tr>
+            <tr class="bg-primary text-white">
                 <th>Id</th>
                 <th>Nom</th>
                 <th>actions</th>
@@ -20,16 +20,17 @@
                 <td>{{ category_virtual.nom }}</td>
                 <td>
                     {# <a href="{{ path('category_virtual_show', {'id': category_virtual.id}) }}">show</a> #}
-                    <a href="{{ path('category_virtual_edit', {'id': category_virtual.id}) }}">edit</a>
+                    <a class="btn btn-primary text-white" href="{{ path('category_virtual_edit', {'id': category_virtual.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="3">Aucun résultat</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('category_virtual_new') }}">Create new</a>
+    <div class="p-3">
+    <a class="btn btn-primary text-white" href="{{ path('category_virtual_new') }}">Nouveau</a>
+    </div>
 {% endblock %}
