--- a/templates/category_virtual/_delete_form.html.twig
+++ b/templates/category_virtual/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post" action="{{ path('category_virtual_delete', {'id': category_virtual.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category_virtual.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-primary text-white">Supprimer</button>
 </form>
