--- a/templates/lasergame/vueCategoryTarif.html.twig
+++ b/templates/lasergame/vueCategoryTarif.html.twig
@@ -25,7 +25,7 @@
                             <h3 class="card-header">{{ tarif.nom }}</h3>
                             <div class="card-body">
                                 <p class="font-italic"> {{tarif.description}} </p>
-                                <p class="h5 card-title">{{ tarif.prix1 }}€ / Personne</p>
+                                <p class="h5 card-title">{{ tarif.prix1 }} / Personne</p>
                             </div>
                         </div>
                     </div>
@@ -36,9 +36,9 @@
                         <div class="card bibo3 text-white sdw{% if loop.first %}{% endif %}">
                             <h3 class="card-header">{{ tarif.nom }}</h3>
                             <div class="card-body">
-                                <h5 class="card-title"> 1 partie : {{ tarif.prix1 }} €</h5>
-                                <h5 class="card-title"> 2 parties : {{ tarif.prix2 }} €</h5>
-                                <h5 class="card-title"> 3 parties : {{ tarif.prix3 }} €</h5>
+                                <h5 class="card-title"> 1 partie : {{ tarif.prix1 }}</h5>
+                                <h5 class="card-title"> 2 parties : {{ tarif.prix2 }}</h5>
+                                <h5 class="card-title"> 3 parties : {{ tarif.prix3 }}</h5>
                             </div>
                         </div>
                     </div>
