--- a/templates/menu/edit.html.twig
+++ b/templates/menu/edit.html.twig
@@ -3,11 +3,20 @@
 {% block title %}Edit Menu{% endblock %}
 
 {% block body %}
-    <h1>Edit Menu</h1>
-
-    {{ include('menu/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('menu_index') }}">back to list</a>
-
-    {{ include('menu/_delete_form.html.twig') }}
+    <div class="pt-2 mt-2">
+        <h2 class="pt-5 mt-5 text-center ">Editer un menu</h2>
+    </div> 
+<div class="pl-5">
+    <div class="pb-2 w-75">
+        {{ include('menu/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+    </div>
+    <div>
+        {{ include('menu/_delete_form.html.twig') }}
+    </div>
+</div>
+<hr>
+<div class="p-3">
+    <a href="{{ path('menu_index') }}" class="btn btn-primary text-white">Retour</a>
+</div>
+    
 {% endblock %}
