--- a/templates/menu/new.html.twig
+++ b/templates/menu/new.html.twig
@@ -3,9 +3,16 @@
 {% block title %}New Menu{% endblock %}
 
 {% block body %}
-    <h1>Create new Menu</h1>
-
-    {{ include('menu/_form.html.twig') }}
-
-    <a href="{{ path('menu_index') }}">back to list</a>
+    <div class="pt-2 mt-2">
+        <h2 class="pt-5 mt-5 text-center ">Ajouter un Menu</h2>
+    </div>
+        <div class="container d-flex ">
+        <div class="pl-5 w-50 text-center col-8 mx-auto">
+            {{ include('menu/_form.html.twig') }}
+        </div>
+    </div>
+    <hr>
+    <div class="p-3">
+        <a href="{{ path('menu_index') }}" class="btn btn-primary text-white">Retour</a>
+    </div>
 {% endblock %}
