--- a/templates/virtual/index.html.twig
+++ b/templates/virtual/index.html.twig
@@ -22,7 +22,7 @@
                 <td>{{ virtual.nom }}</td>
                 <td>
                     {# <a href="{{ path('virtual_show', {'id': virtual.id}) }}">show</a> #}
-                    <a href="{{ path('virtual_edit', {'id': virtual.id}) }}">edit</a>
+                    <a href="{{ path('virtual_edit', {'id': virtual.id}) }}" class="btn btn-primary text-white">Modifier</a>
                 </td>
             </tr>
         {% else %}
