update base back and update vu category vr

--- a/templates/category_menu/index.html.twig
+++ b/templates/category_menu/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="pt-2 mt-2">
-        <h2 class="pt-5 mt-5 text-center ">Liste des menus</h2>
+        <h2 class="pt-5 mt-5 text-center ">Liste des categories de menus</h2>
     </div>
 
     <table class="table">
