--- a/templates/category_virtual/index.html.twig
+++ b/templates/category_virtual/index.html.twig
@@ -1,9 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends 'category_tarif/base.html.twig' %}
 
 {% block title %}CategoryVirtual index{% endblock %}
 
 {% block body %}
-    <h1>CategoryVirtual index</h1>
+    <h1>Liste des categories de jeux VR</h1>
 
     <table class="table">
         <thead>
