--- a/templates/lasergame/vueAllCategoryTarif.html.twig
+++ b/templates/lasergame/vueAllCategoryTarif.html.twig
@@ -3,7 +3,7 @@
 {% block title %} - Le Complexe{% endblock %}
 
 {% block body %}
-<main>
+<main class="main-divlaser" id="typo-laser">
     <div class="header-laser d-flex align-items-center justify-content-center">
         <div class=" mx-auto w-100 bg-title-laser text-center">
             <h1 class="lasertitle text-white p-3">Laser Game Arena</h1>
