--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,6 +1,6 @@
 <footer class="bg-primary text-center text-white d-flex flex-row">
     <div class="container-fluid footer-filtre-resto d-flex align-items-center justify-content-center">
-        <div class="row col-sm-12 col-md-8 col-lg-8 col-xl-8 m-5">
+        <div class="row col-sm-12 col-md-8 col-lg-8 col-xl-8 mt-5">
             <div id="contact" class="py-1 col-sm-12 col-md-12 col-lg-12 col-xl-6">
                 {% include 'partials/contactForm.html.twig' %}
             </div>
@@ -13,7 +13,7 @@
                 <a href="tel:+33711223344" class="text-light pb-5"><button type="submit" name="submit" value="Appeler" class="btn btn-success rounded">Appeler</button></a>
             </div>
             
-            <div class="p-5 mx-auto my-auto">
+            <div class="pt-5 mx-auto my-auto">
                 <p>© Copyright 2020 Laetitia, Nagib, Eddy, Younes</p>
                 <a href="https://www.facebook.com/ARONALEA/" target="_blank"><i class="fab fa-facebook-square text-white fa-3x"></i></a>
                 <a href="https://www.facebook.com/ARONALEA/" target="_blank"><i class="fab fa-instagram-square text-white fa-3x"></i></a>  
