--- a/templates/realitevirtuelle/vueCategoryVirtual.html.twig
+++ b/templates/realitevirtuelle/vueCategoryVirtual.html.twig
@@ -13,7 +13,7 @@
     <h2 class="mt-5 text-center text-white"> {{ category.nom }} </h2>
     <div class="row">
         {% for jeu in jeux %}
-            <div class="col-4 text-center  mt-5 mx-auto">
+            <div class="col-4 text-centerl mt-5 mx-auto">
                 <div class="card text-light titlecatvr mb-3 {% if loop.first %} {% endif %}">
                     <h3 class="card-header">{{ jeu.nom }}</h3>
                     <div class="card-body">
