--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -25,8 +25,8 @@
                 <td>{{ menu.image }}</td>
                 <td>{{ menu.prix }}</td>
                 <td>
-                    <a href="{{ path('menu_show', {'id': menu.id}) }}">show</a>
-                    <a href="{{ path('menu_edit', {'id': menu.id}) }}">edit</a>
+                    <a class="btn btn-primary" href="{{ path('menu_show', {'id': menu.id}) }}">show</a>
+                    <a class="btn btn-primary" href="{{ path('menu_edit', {'id': menu.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
