--- a/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
+++ b/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
@@ -17,7 +17,7 @@
             <div class="row">
                 {% for category in categories %}
                 <div class="col-4 text-center mt-5 mx-auto  divcatlaser">
-                    <div class="card pt-5 mb-3 bg-secondary catvr">
+                    <div class="card pt-5 mb-3 bg-secondary  bgImgVirtual" style="--bg:url(../{{ category.image }})">
                         <h3 class="card-header titlecatvr sdw text-light">{{ category.nom }}</h3>
                         <div class="card-body d-flex flex-column-reverse col-5 mx-auto">
                             <a href="{{ url('categoryVR',{id:category.id}) }}" class="card-link btn titlecatvr sdw rounded text-light">Choisir</a>
