--- a/templates/realitevirtuelle/realitevirtuelle.html.twig
+++ b/templates/realitevirtuelle/realitevirtuelle.html.twig
@@ -53,7 +53,7 @@
                     </div>
             </div> 
 
-             <div class="bg-primary text-center col-12 p-5">
+             <div class="bg-primary text-right col-12 p-5">
                 <a href="{{ path('allcategoryVR') }}" class="btn btn-outline titlecatvr text-white mr-5 rounded">NOS JEUX VR <i class="fas fa-arrow-right"></i></a>
             </div>            
         </div>
