--- a/templates/restaurant/restaurant.html.twig
+++ b/templates/restaurant/restaurant.html.twig
@@ -48,7 +48,7 @@
             </div> 
 
             <div class="bg-primary text-right col-12 p-5">
-                <a href="{{ path('allcategoryMenu')}}" class="btn text-white bibo mr-5 rounded">CARTE & MENUS</a>
+                <a href="{{ path('allcategoryMenu')}}" class="btn text-white bibo mr-5 rounded">CARTE & MENUS <i class="fas fa-arrow-right"></i></a>
             </div>            
         </div>
 
