--- a/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
+++ b/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
@@ -11,7 +11,8 @@
             <p class="text-white text-center p-3 vrsubtitle h3 font-weight-light"> Vivre de nouvelles expériences </p>
         </div>
     </div>
- <div class="body-laser text bg-primary  container-fluid">
+    
+    <div class="body-laser text bg-primary  container-fluid">
         <div class="bg-primary py-5">
             <h2 class="card-header titlecatvr sdw my-3 text-center text-white">Choisir une catégorie</h2>
             <div class="row">
@@ -27,10 +28,8 @@
                 {% endfor %}
             </div>
                 <div class="row pt-5">
-        <div>
+        <div class="col-3">
             <a class="card-link btn titlecatvr sdw rounded text-light" href="{{ path('realitevirtuelle') }}">Retour</a>
-        </div>
-    </div>
         </div>
     </div>
 </main>
