--- a/templates/realitevirtuelle/vueCategoryVirtual.html.twig
+++ b/templates/realitevirtuelle/vueCategoryVirtual.html.twig
@@ -10,30 +10,34 @@
             <p class="text-white text-center p-3 vrsubtitle h3 font-weight-light"> Vivre de nouvelles expériences </p>
         </div>
     </div>
-    <h2 class="mt-5 text-center text-white"> {{ category.nom }} </h2>
-    <div class="row">
-        {% for jeu in jeux %}
-            <div class="col-4 text-center  mt-5 mx-auto">
-                <div class="card text-light titlecatvr mb-3 {% if loop.first %} {% endif %}">
-                    <h3 class="card-header">{{ jeu.nom }}</h3>
-                    <div class="card-body">
-                        <h5 class="card-title"> {{ jeu.category.nom }}</h5>
-                        <img src="{{ asset(jeu.image) }}" alt="{{ jeu.category.nom }}" width="100%" class="rounded">
+
+    <div class="body-laser text bg-primary  container-fluid">
+        <div class="bg-primary py-5">
+            <h2 class="mt-5 text-center text-white titlecatvr sdw"> {{ category.nom }} </h2>
+            <div class="row">
+                {% for jeu in jeux %}
+                    <div class="col-4 text-center  mt-5 mx-auto sdw">
+                        <div class="card text-light titlecatvr mb-3 {% if loop.first %} {% endif %}">
+                            <h3 class="card-header">{{ jeu.nom }}</h3>
+                            <div class="card-body">
+                                <h5 class="card-title"> {{ jeu.category.nom }}</h5>
+                                <img src="{{ asset(jeu.image) }}" alt="{{ jeu.category.nom }}" width="100%" class="rounded">
+                            </div>
+                            <div>
+                                <a href="{{ url('jeuVR', {id: jeu.id}) }}" class=" btn text-light">En savoir plus &rarr;</a>
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        <a href="{{ url('jeuVR', {id: jeu.id}) }}" class=" btn">En savoir plus &rarr;</a>
-                    </div>
+                    
+                {% endfor %}
+            </div>
+            <div class="row pt-5">
+                <div class="col-3">
+                    <a class="text-whitecard-link btn titlecatvr sdw rounded text-light" href="{{ path('allcategoryVR') }}">Retour</a>
                 </div>
             </div>
-            
-        {% endfor %}
-    </div>
-    <div class="row pt-5">
-        <div>
-            <a class="text-whitecard-link btn titlecatvr sdw rounded text-light" href="{{ path('allcategoryVR') }}">Retour</a>
         </div>
     </div>
-
 </main>
 
 {% endblock %}
