--- a/templates/restaurant/vueAllCategoryMenu.html.twig
+++ b/templates/restaurant/vueAllCategoryMenu.html.twig
@@ -1,21 +1,48 @@
-{% extends 'base.html.twig' %}
+{% extends 'restaurant/base.html.twig' %}
 
 {% block title %} Les menus du restaurant- Le Complexe{% endblock %}
 
 {% block body %}
 <main>
-    <div class="mt-5">
-        <h3 class="text-primary text-center">Choisis ton repas</h3>
-        <div class="text-center py-3 articles-about row">
-            {% for category in categories %}
-            <div class="col-6 mx-auto">
-            <a href="{{ url('categoryMenu',{id:category.id}) }}" class="text-primary">{{ category.nom }}</a>
-        
-            <img src="{{ asset(category.image) }}" alt="{{category.nom }}" width="150">
-           </div>
-            {% endfor %}
-        </div>   
+
+    <div class="header-resto d-flex align-items-center justify-content-center">
+        <div class=" mx-auto w-100 bg-title-laser text-center">
+            <h1 class="lasertitle text-white p-3">Jungle Bar</h1>
+            <h3 class="lasersubtitle text-danger"></h3>
+            <p class="lasersubtitle h3 text-white p-3 font-weight-light">Gratuit seulement pour Laeti, Nagib, Younes et Eddy</p>
+        </div>
     </div>
-    
+
+    <div class="body-resto text bg-primary  container-fluid">
+        <div class="bg-primary py-5">
+            <h2 class="card-header titlecatresto sdw my-3 text-center text-white">Choisir une catégorie</h2>
+            <div class="row">
+                {% for category in categories %}
+                <div class="col-4 text-center mt-5 mx-auto  divcatresto">
+                    <div class="card pt-5 mb-3 bg-secondary catresto">
+                        <h3 class="card-header titlecatresto sdw text-light">{{ category.nom }}</h3>
+                        <div class="card-body d-flex flex-column-reverse col-5 mx-auto">
+                            <a href="{{ url('categoryMenu',{id:category.id}) }}" class="card-link btn titlecatresto sdw rounded text-light">Choisir</a>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+            <div class="row pt-5">
+                <div class="col-3">
+                    <a class="card-link btn titlecatresto sdw rounded text-light" href="{{ path('restaurant') }}">Retour</a>
+                </div>
+            </div>
+        </div>
+    </div>
+                                                    {# {% for category in categories %}
+                                                    <div class="col-6 mx-auto">
+                                                    <a href="{{ url('categoryMenu',{id:category.id}) }}" class="text-primary">{{ category.nom }}</a>
+
+                                                    <img src="{{ asset(category.image) }}" alt="{{category.nom }}" width="150">
+                                                    </div>
+                                                    {% endfor %}
+                                                    </div>   
+                                                    </div>  #}
 </main>
 {% endblock %}
